# tinc

./: .gitignore  .gitmodules  CMakeLists.txt  DesignDoc.md  README.md  buildDependencies.cmake  build_deps.sh  update_schema_cpp.sh
.circleci/: config.yml
cookbook/: voltage_scroller_01.cpp  voltage_scroller_02.cpp  voltage_scroller_03.cpp  voltage_scroller_04.cpp  voltage_scroller_05.cpp
doc/: Doxyfile  tinc_cache_schema.json
examples/: computationchain.cpp  computationchain_network.cpp  datapool.cpp  datapool_network.cpp  diskbuffer.cpp  netcdf_buffer.cpp  parameter_sweep.cpp  parameter_sweep_async.cpp  parameter_sweep_async_network.cpp  parameters_from_python.cpp  parameterspace_cache.cpp  parameterspace_files.cpp  parameterspace_gui.cpp  parameterspace_netcdf.cpp  parameterspace_network.cpp  parameterspace_subdirs.cpp  processor_parameter.cpp  tinc_app.cpp  trajectorymesh.cpp  trajectorymesh_network.cpp  update_parameter_async.cpp  vis_slicing_atom_render.cpp  vis_trajectorymesh_network.cpp
examples/app/: basic_app.cpp  data_from_python.cpp  trigger_python_compute.cpp  update_graph_python.cpp
include/tinc/: AbstractDiskBuffer.hpp  AtomRenderer.hpp  BufferManager.hpp  CacheManager.hpp  ComputationChain.hpp  CppProcessor.hpp  DataPool.hpp  DataPoolJson.hpp  DataPoolNetCDF.hpp  DiskBuffer.hpp  DiskBufferAbstract.hpp  DiskBufferImage.hpp  DiskBufferJson.hpp  DiskBufferNetCDF.hpp  DiskBufferNetCDFData.hpp  DiskBufferText.hpp  DistributedPath.hpp  GUI.hpp  IdObject.hpp  ImageDiskBuffer.hpp  JsonDiskBuffer.hpp  NetCDFDiskBuffer.hpp  ParameterSpace.hpp  ParameterSpaceDimension.hpp  Processor.hpp  ProcessorAsync.hpp  ProcessorAsyncWrapper.hpp  ProcessorCpp.hpp  ProcessorGraph.hpp  ProcessorScript.hpp  ScriptProcessor.hpp  TincClient.hpp  TincProtocol.hpp  TincServer.hpp  VASPReader.hpp  VariantValue.hpp
include/tinc/vis/: AtomRenderer.hpp  GUI.hpp  SceneObject.hpp  TrajectoryRender.hpp
src/: CacheManager.cpp  ComputationChain.cpp  CppProcessor.cpp  DataPool.cpp  DataPoolJson.cpp  DataPoolNetCDF.cpp  DiskBuffer.cpp  DiskBufferNetCDFData.cpp  DistributedPath.cpp  GUI.cpp  IdObject.cpp  ParameterSpace.cpp  ParameterSpaceDimension.cpp  Processor.cpp  ProcessorAsync.cpp  ProcessorCpp.cpp  ProcessorGraph.cpp  ProcessorScript.cpp  ScriptProcessor.cpp  TincClient.cpp  TincProtocol.cpp  TincServer.cpp  VASPReader.cpp  VariantValue.cpp  tinc_cache_schema.cpp  tinc_protocol.pb.cc  tinc_protocol.pb.h  tinc_protocol.proto
src/vis/: AtomRenderer.cpp  GUI.cpp  SceneObject.cpp  TrajectoryRender.cpp
tests/: CMakeLists.txt  cachemanager.cpp  datapool.cpp  diskbuffer.cpp  parameters.cpp  parameterspace.cpp  processor.cpp  python_common.hpp  pythonclient.cpp  pythonclient_cache.cpp  pythonclient_datapool.cpp  pythonclient_diskbuffer.cpp  pythonclient_parameters.cpp  pythonclient_parameterspaces.cpp  scriptprocessor.cpp  tincprotocol.cpp  tincprotocol_barrier.cpp  tincprotocol_cache.cpp  tincprotocol_datapools.cpp  tincprotocol_diskbuffers.cpp  tincprotocol_parameters.cpp  tincprotocol_parameterspaces.cpp  tincprotocol_processors.cpp  tincprotocol_remote_parameter.cpp  tincprotocol_status.cpp
tinc_server/: CMakeLists.txt  main.cpp
